[gd_scene load_steps=9 format=3 uid="uid://duit2rxcu1nbh"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Script" path="res://scripts/SamuraiSword.gd" id="2_exwls"]
[ext_resource type="PackedScene" uid="uid://dm50k36s3e8ha" path="res://assets/models/SWORD_prototype.glb" id="2_yytum"]

[sub_resource type="BoxShape3D" id="5"]
size = Vector3(0.4, 0.2, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8o8bf"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_eau7d"]
material = SubResource("StandardMaterial3D_8o8bf")

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.75
height = 1.5

[sub_resource type="CapsuleShape3D" id="8"]
radius = 0.75
height = 1.5

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
collision_layer = 2
collision_mask = 5
script = ExtResource("1")

[node name="SamuraiSword" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.568524, 0.400728, -1.49814)
collision_layer = 8
collision_mask = 0
script = ExtResource("2_exwls")

[node name="SWORD_prototype" parent="SamuraiSword" instance=ExtResource("2_yytum")]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, -0.2, -4.76837e-07, -1.6)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SamuraiSword"]
shape = SubResource("5")

[node name="SamuraiSwordHitBox" type="Area3D" parent="SamuraiSword"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="SamuraiSword/SamuraiSwordHitBox"]
shape = SubResource("5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_eau7d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("1")

[node name="WeaponPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.763652, 0.639786, -0.595993)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="PlayerHitBox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerHitBox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("8")

[node name="HitBoxTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="SamuraiSword/SamuraiSwordHitBox" to="SamuraiSword" method="_on_SamuraiSwordHitBox_body_entered"]
[connection signal="body_entered" from="PlayerHitBox" to="." method="_on_PlayerHitBox_body_entered"]
[connection signal="body_exited" from="PlayerHitBox" to="." method="_on_PlayerHitBox_body_exited"]
[connection signal="timeout" from="HitBoxTimer" to="." method="_on_HitBoxTimer_timeout"]
